--- a/src/components/PizzaList/PizzaList.css
+++ b/src/components/PizzaList/PizzaList.css
@@ -8,7 +8,7 @@
 .pizza-menu-item {
   min-height: 250px;
   width: 240px;
-  padding: 25px;
+  padding: 10px 25px;
   margin: 10px;
   border: 1px black solid;
 }
