font family, and background, some spacing for header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
 .App-header {
     background-color: #222;
     height: 70px;
-    padding: 20px;
+    padding: 20px 50px;
     color: white;
     margin-bottom: 20px;
     display: flex;
