--- a/src/components/PizzaListItem/PizzaListItem.css
+++ b/src/components/PizzaListItem/PizzaListItem.css
@@ -3,4 +3,9 @@ img{
   max-height: 240px;
   min-height: 240px;
   object-fit: cover;
+  border-radius: 7px;
+}
+
+.pizza-menu-item{
+  border-radius: 10px;
 }
