--- a/src/components/PizzaListItem/PizzaListItem.css
+++ b/src/components/PizzaListItem/PizzaListItem.css
@@ -6,6 +6,12 @@ img{
   border-radius: 7px;
 }
 
-.pizza-menu-item{
-  border-radius: 10px;
+.pizza-menu-item {
+  min-height: 250px;
+  width: 240px;
+  padding: 10px 25px;
+  margin: 10px;
+  border: 1px black solid;
+  border-radius: 3px;
+  box-shadow: 0px 0px 5px gray;
 }
